apps/general/code-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-cloudflare
  namespace: code-server
spec:
  ingressClassName: cloudflare
  rules:
    - host: code.${DOMAIN_0}
      http:
        paths:
          - backend:
              service:
                name: code-server
                port:
                  number: 10063
            path: /
            pathType: Prefix
